Prefer final classes, minor formating only