@@ -4,18 +4,17 @@ import io.ebean.DatabaseBuilder;
 import io.ebean.core.type.ExtraTypeFactory;
 import io.ebean.core.type.ScalarType;
 
-import java.util.Arrays;
 import java.util.List;
 
-public class PGvectorExtraTypeFactory implements ExtraTypeFactory {
+public final class PGvectorExtraTypeFactory implements ExtraTypeFactory {
 
-    @Override
-    public List<? extends ScalarType<?>> createTypes(DatabaseBuilder.Settings config, Object objectMapper) {
-        return Arrays.asList(
-                new ScalarTypePGvector(),
-                new ScalarTypePGhalfvec(),
-                new ScalarTypePGsparsevec(),
-                new ScalarTypePGbit()
-        );
-    }
+  @Override
+  public List<? extends ScalarType<?>> createTypes(DatabaseBuilder.Settings config, Object objectMapper) {
+    return List.of(
+      new ScalarTypePGvector(),
+      new ScalarTypePGhalfvec(),
+      new ScalarTypePGsparsevec(),
+      new ScalarTypePGbit()
+    );
+  }
 }
